--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   ],
   "author": "Enky Lion",
   "license": "ISC",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "vite": "^4.0.0"
-  },
-  "dependencies": {
-    "esbuild": "^0.24.0"
   }
 }
