Description of the changes made

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Enki App built with React and Vite",
   "main": "index.js",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "keywords": [
     "vite",
     "react",
@@ -16,6 +17,7 @@
   "author": "Enky Lion",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
