--- a/package.json
+++ b/package.json
@@ -17,12 +17,30 @@
   "author": "Enky Lion",
   "license": "ISC",
   "dependencies": {
+    "@babel/eslint-parser": "^7.25.9",
     "@supabase/supabase-js": "^2.47.9",
+    "eslint-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^4.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
