--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Enki App built with React and Vite",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [
     "vite",
@@ -23,7 +22,7 @@
     "html-webpack-plugin": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
